add pkglint and fix python versions

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         hatch-environment:
           - test:lint
+          - test:pkglint
 
     steps:
       - uses: actions/checkout@v2
