--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,33 +1,33 @@
-name: Test
+# name: Test
 
-on:
-  - push
-  - pull_request
+# on:
+#   - push
+#   - pull_request
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version:
-          - "3.11"
-          - "3.12"
-          - "3.13"
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         python-version:
+#           - "3.11"
+#           - "3.12"
+#           - "3.13"
 
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           fetch-depth: 0
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
+#       - name: Set up Python ${{ matrix.python-version }}
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: python -m pip install hatch
+#       - name: Install dependencies
+#         run: python -m pip install hatch
 
-      - name: Run tests
-        run: hatch run test:test
+#       - name: Run tests
+#         run: hatch run test:test
